# meanshift

./: CMakeLists.txt  README.md  add_copyright.sh  copyright_cpp.txt  copyright_matlab.txt  scons.what  sconstruct
cpp/: CMakeLists.txt  meanshift.mex.cpp  scons.what
cpp/meanshift/: bandwidth.hpp  chart.hpp  experimental.hpp  kernel.hpp  meanshift.hpp  metric.hpp  mex_factory.hpp  mexplus_ext.hpp  profile.hpp
cpp/meanshift/common/: std_ext.hpp  zip.hpp
cpp/meanshift/manifold/: chart.hpp  s2.hpp  vector_space.hpp
matlab/: CMakeLists.txt  Meanshift.m  data.mat  meanshift_init.m  scons.what  test.m  test2.m
matlab/+MEANSHIFT/: meanshift.m  test.m
matlab/+MMS/: Meanshift.m  test.m
mexplus/: make.m
mexplus/example/: Database.m  runDatabase.m
mexplus/example/private/: Database_.cc  Environment_.cc
mexplus/ext/: eigensparse.cpp  mexplus_ext.hpp  sparse_matlab_eigen.hpp
mexplus/include/: mexplus.h
mexplus/include/mexplus/: arguments.h  dispatch.h  mxarray.h  mxtypes.h
mexplus/test/: testAll.m  testArguments.cc  testDispatch.cc  testMxArray.cc  testMxTypes.cc  testSession.cc  testString.cc
site_scons/site_tools/matlab/: __init__.py
